// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input/ino-select Disabled smoke-test 1`] = `
<div id="root-inner">
  <div class="story-select">
    <ino-select disabled="true"
                name="select-1"
                outline="false"
                label="Select label"
                required="false"
                show-label-hint="false"
                value="Option 1"
                error="false"
                helper
                helper-persistent="false"
                helper-validation="false"
    >
      <ino-option value="Option 1">
        Option 1
      </ino-option>
      <ino-option value="Option 2">
        Option 2
      </ino-option>
      <ino-option value="Option 3">
        Option 3
      </ino-option>
    </ino-select>
  </div>
</div>
`;

exports[`Input/ino-select Error smoke-test 1`] = `
<div id="root-inner">
  <div class="story-select">
    <ino-select disabled="false"
                name="select-1"
                outline="false"
                label="Select label"
                required="false"
                show-label-hint="false"
                value="Option 1"
                error="true"
                helper
                helper-persistent="false"
                helper-validation="false"
    >
      <ino-option value="Option 1">
        Option 1
      </ino-option>
      <ino-option value="Option 2">
        Option 2
      </ino-option>
      <ino-option value="Option 3">
        Option 3
      </ino-option>
    </ino-select>
  </div>
</div>
`;

exports[`Input/ino-select Form smoke-test 1`] = `
<div id="root-inner">
  <div class="story-select">
    <form>
      <p>
        Form should not submit if no value is selected
      </p>
      <ino-select required>
        <ino-option value="Option 1">
          Option 1
        </ino-option>
        <ino-option value="Option 2">
          Option 2
        </ino-option>
        <ino-option value="Option 3">
          Option 3
        </ino-option>
      </ino-select>
      <ino-button type="submit">
        Submit
      </ino-button>
    </form>
  </div>
</div>
`;

exports[`Input/ino-select HelperMessage smoke-test 1`] = `
<div id="root-inner">
  <div class="story-select">
    <ino-select disabled="false"
                name="select-1"
                outline="false"
                label="Select label"
                required="false"
                show-label-hint="false"
                value="Option 1"
                error="false"
                helper="My Helper Message"
                helper-persistent="true"
                helper-validation="false"
    >
      <ino-option value="Option 1">
        Option 1
      </ino-option>
      <ino-option value="Option 2">
        Option 2
      </ino-option>
      <ino-option value="Option 3">
        Option 3
      </ino-option>
    </ino-select>
  </div>
</div>
`;

exports[`Input/ino-select HelperMessageValidation smoke-test 1`] = `
<div id="root-inner">
  <div class="story-select">
    <ino-select disabled="false"
                name="select-1"
                outline="false"
                label="Select label"
                required="true"
                show-label-hint="false"
                value="null"
                error="false"
                helper="This message will be highlighted when no option has been selected"
                helper-persistent="true"
                helper-validation="true"
    >
      <ino-option value="Option 1">
        Option 1
      </ino-option>
      <ino-option value="Option 2">
        Option 2
      </ino-option>
      <ino-option value="Option 3">
        Option 3
      </ino-option>
    </ino-select>
  </div>
</div>
`;

exports[`Input/ino-select Outlined smoke-test 1`] = `
<div id="root-inner">
  <div class="story-select">
    <ino-select disabled="false"
                name="select-1"
                outline="true"
                label="Select label"
                required="false"
                show-label-hint="false"
                value="Option 1"
                error="false"
                helper
                helper-persistent="false"
                helper-validation="false"
    >
      <ino-option value="Option 1">
        Option 1
      </ino-option>
      <ino-option value="Option 2">
        Option 2
      </ino-option>
      <ino-option value="Option 3">
        Option 3
      </ino-option>
    </ino-select>
  </div>
</div>
`;

exports[`Input/ino-select Playground smoke-test 1`] = `
<div id="root-inner">
  <div class="story-select">
    <ino-select disabled="false"
                name="select-1"
                outline="false"
                label="Select label"
                required="false"
                show-label-hint="false"
                value="Option 1"
                error="false"
                helper
                helper-persistent="false"
                helper-validation="false"
    >
      <ino-option value="Option 1">
        Option 1
      </ino-option>
      <ino-option value="Option 2">
        Option 2
      </ino-option>
      <ino-option value="Option 3">
        Option 3
      </ino-option>
    </ino-select>
  </div>
</div>
`;

exports[`Input/ino-select ShowLabelHint smoke-test 1`] = `
<div id="root-inner">
  <div class="story-select">
    <ino-select disabled="false"
                name="select-1"
                outline="false"
                label="Select label"
                required="false"
                show-label-hint="true"
                value="Option 1"
                error="false"
                helper
                helper-persistent="false"
                helper-validation="false"
    >
      <ino-option value="Option 1">
        Option 1
      </ino-option>
      <ino-option value="Option 2">
        Option 2
      </ino-option>
      <ino-option value="Option 3">
        Option 3
      </ino-option>
    </ino-select>
  </div>
</div>
`;

exports[`Input/ino-select WithIcon smoke-test 1`] = `
<div id="root-inner">
  <div class="story-select">
    <div style="height: 400px;">
      <ino-select label="Select with leading icon">
        <ino-icon slot="icon-leading"
                  icon="user"
        >
        </ino-icon>
        <ino-option value="Selected Option"
                    selected
        >
          Selected Option
        </ino-option>
        <ino-option value="Option 1">
          Option 1
        </ino-option>
        <ino-option value="Option 2">
          Option 2
        </ino-option>
        <ino-option value="Option 3">
          Option 3
        </ino-option>
      </ino-select>
      <ino-select style="margin-top: 150px;"
                  outline
                  label="Select with leading icon"
      >
        <ino-icon slot="icon-leading"
                  icon="user"
        >
        </ino-icon>
        <ino-option value="Selected Option"
                    selected
        >
          Selected Option
        </ino-option>
        <ino-option value="Option 1">
          Option 1
        </ino-option>
        <ino-option value="Option 2">
          Option 2
        </ino-option>
        <ino-option value="Option 3">
          Option 3
        </ino-option>
      </ino-select>
    </div>
  </div>
</div>
`;
